# gaimode

./: Cargo.toml
gaimode/: Cargo.toml
gaimode/src/: dbus_i.rs  gaiproto.rs  main.rs
gaimoded/: 50-gaimoded.rules  Cargo.toml  gaimoded.service  installing.md  run.sh  settings.example.toml
gaimoded/src/: cfg.rs  cpu.rs  gaiproto.rs  io.rs  listener.rs  main.rs  optimizer.rs  scheduler.rs  signals.rs  utils.rs
gaiproto/: Cargo.toml
