[package]
name = "gaimoded"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
libc = "0.2.178"
nix = { version = "0.30.1", features = ["process", "fs", "signal"] }
tokio = { version = "1.48.0", features = ["full"] }
gaiproto = { path = "../gaiproto" }
glob = "0.3.3"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
dbus = "0.9.10"
clap = { version = "4.5.53", features = ["derive"] }
tokio-util = { version = "0.7.17", features = ["rt"] }
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
